[package]
name = "untitled-game"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

console_error_panic_hook = { version = "0.1.6", optional = true }

wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.60"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
rand = "0.8.5"
getrandom = {version = "0.2.8", features = ["js"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'ImageData',
  'Node',
  'Window',
]
